<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- 搜索, 应该作为动作按钮展示-->
    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />
    <!-- 设置, 在溢出菜单中展示 -->
    <item android:id="@+id/action_show_forbidden"
        android:title="@string/action_show_forbidden"
        app:showAsAction="never" />
    <item android:id="@+id/action_show_all"
        android:title="@string/action_show_all"
        app:showAsAction="never" />
    <item android:id="@+id/action_export"
        android:title="@string/action_export"
        app:showAsAction="never" />
    <item android:id="@+id/action_export_by_scan"
        android:title="@string/action_export_by_scan"
        app:showAsAction="never" />
</menu>
    <!--android:icon="@drawable/ic_action_search"-->